--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -2,10 +2,11 @@
     display:flex ;
     flex-direction:row;
     width:'100%';
-    height:'75px';
+    height:'100px';
     background-color: gray;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items:center;
+    margin-bottom: 20px;
     
 }
 ul{
@@ -14,8 +15,11 @@ ul{
     flex-direction:row;
     justify-content:space-between;
 
+
 }
 li{
+    margin-top: 25px;
+    font-size: large;
     list-style-type:none;
     margin-left: 10px;
     margin-right: 10px;
@@ -24,12 +28,12 @@ li{
     font-size: 2em;
     color:white;
 }
-.boton{
-    margin-right: 50px;
-}
 
 a{
     color:white;
+    text-decoration: none !important;
+    font-weight: bold;
+    color: white !important;
 }
 .carritoCompras{
     display: flex;
